// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Generic/ButtonWithDropDown No Items 1`] = `
<div
  className="dd flex-row"
>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    type="button"
  >
    Text
  </button>
</div>
`;

exports[`Storyshots Generic/ButtonWithDropDown Normal 1`] = `
<div
  className="dd flex-row"
>
  <button
    className="dd button has-background hoverable text-button is-rounded"
    type="button"
  >
    Text
  </button>
  <div
    className="dd"
  >
    <button
      className="dd icon-button"
      id="undefined-dropdown"
      onClick={[Function]}
      type="button"
    >
      <span
        className="dd icon icon-chevron-down"
      />
    </button>
  </div>
</div>
`;
